# PrusaConsole

./: .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  Makefile  README.md  better.cpp  build.sh  console_reader.cpp  dependency_setup.sh  history.cpp  keys.cpp  project.sh  tab_completion.cpp  tree_search.cpp
ConsoleReader/: command.cpp  history.hpp  tab_completion.cpp  tab_completion.hpp
include/: auto_complete.hpp  cli.hpp  command.hpp  command_tree.hpp  command_tree_builder.hpp  concrete_commands.hpp  console_reader.hpp  history.hpp  key_actions.hpp  parser.hpp  printer.hpp  tab_completion.hpp
scripts/: dependency_setup.sh  format.sh  project.sh  run_virtual.sh
src/: .printer.cpp.swp  cli.cpp  command.cpp  command_tree.cpp  command_tree_builder.cpp  concrete_commands.cpp  console_reader.cpp  history.cpp  key_actions.cpp  main.cpp  parser.cpp  printer.cpp  tab_completion.cpp
tests/: command_tests.cpp  command_tree_tests.cpp  console_reader_tests.cpp  history_tests.cpp  key_actions_tests.cpp  main.cpp  parser_tests.cpp  tab_completion_tests.cpp
